<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout"
    android:background="@drawable/ic_interface_user"
    tools:context=".interface_user.interface_user">

    <ScrollView
        style="@style/layout"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_label"
                style="@style/layout_label"
                android:layout_marginLeft="@dimen/border_left_right"
                android:layout_marginTop="@dimen/top_border2"
                android:layout_marginRight="@dimen/border_left_right"
                android:background="@drawable/contorno2"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:text="@string/user"
                android:textColor="@color/gris2"
                android:textSize="@dimen/text_height"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_label"
                style="@style/layout_edit"
                android:layout_marginTop="@dimen/text_height"
                android:background="@drawable/contorno2"
                android:hint="@string/name_user"
                android:textColorHint="@color/gris2"
                app:layout_constraintLeft_toLeftOf="@+id/user_label"
                app:layout_constraintRight_toRightOf="@+id/user_label"
                app:layout_constraintTop_toBottomOf="@+id/user_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_label2"
                    style="@style/layout"
                    android:inputType="textUri"
                    android:textColor="@color/gris2"

                    ></com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_label"
                style="@style/layout_edit"
                android:layout_marginTop="@dimen/text_height"
                android:background="@drawable/contorno2"
                android:hint="@string/last_name_user"
                android:textColorHint="@color/gris2"
                app:layout_constraintLeft_toLeftOf="@+id/name_label"
                app:layout_constraintRight_toRightOf="@+id/name_label"
                app:layout_constraintTop_toBottomOf="@+id/name_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_label2"
                    style="@style/layout"
                    android:inputType="textUri"
                    android:textColor="@color/gris2"

                    ></com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_label"
                style="@style/layout_edit"
                android:layout_marginTop="@dimen/text_height"
                android:background="@drawable/contorno2"
                android:hint="@string/phone_number_user"
                android:textColorHint="@color/gris2"
                app:layout_constraintLeft_toLeftOf="@+id/last_name_label"
                app:layout_constraintRight_toRightOf="@+id/last_name_label"
                app:layout_constraintTop_toBottomOf="@+id/last_name_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_label2"
                    style="@style/layout"
                    android:inputType="textPhonetic"
                    android:textColor="@color/gris2"

                    ></com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_label"
                style="@style/layout_edit"
                android:layout_marginTop="@dimen/text_height"
                android:background="@drawable/contorno2"
                android:hint="@string/email_user"
                android:textColorHint="@color/gris2"
                app:layout_constraintLeft_toLeftOf="@+id/phone_label"
                app:layout_constraintRight_toRightOf="@+id/phone_label"
                app:layout_constraintTop_toBottomOf="@+id/phone_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_label2"
                    style="@style/layout"
                    android:inputType="textWebEmailAddress"
                    android:textColor="@color/gris2"

                    ></com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                style="@style/layout_button"
                android:layout_marginTop="@dimen/top_button"
                android:background="@drawable/contorno"
                android:backgroundTintMode="screen"
                android:text="@string/login"
                android:textColor="@color/gris1"
                android:textSize="@dimen/text_button"
                app:layout_constraintLeft_toLeftOf="@id/email_label"
                app:layout_constraintRight_toRightOf="@id/email_label"
                app:layout_constraintTop_toBottomOf="@id/email_label" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>